--- a/README
+++ b/README
@@ -193,6 +193,14 @@ RMagick:: http://rmagick.rubyforge.org/
 
 	  librmagick-ruby
 
+Barby:: http://toretore.github.com/barby/
+
+	  libbarby-ruby
+
+Prawn:: http://prawn.majesticseacreature.com/
+
+	  libprawn-ruby
+
 Note that some of the Debian packages are not part of the currently
 stable Debian release (5.0, Lenny), but can be safely installed from
 the unstable repository.
