--- a/po/comas.pot
+++ b/po/comas.pot
@@ -2282,7 +2282,22 @@ msgid ""
 "conferences. "
 msgstr ""
 
-#: app/views/people_adm/mass_mail.html.erb:10
+#: app/views/people_adm/mass_mail.html.erb:9
+msgid ""
+"You can also export the list of attendees interested in "
+"receiving further information and perform the mailing from a "
+"separate application: %s, %s."
+msgstr ""
+
+# app/views/people_adm/mass_mail.html.erb:12
+msgid "Full listing (including names)"
+msgstr ""
+
+# app/views/people_adm/mass_mail.html.erb:14
+msgid "Mail addresses only"
+msgstr ""
+
+#: app/views/people_adm/mass_mail.html.erb:18
 #: app/views/conferences_adm/mail_attendees.html.erb:11
 #: app/views/people/proposals.html.erb:14 app/views/people/profile.html.erb:21
 #: app/views/proposals/by_author.html.erb:15
@@ -2290,19 +2305,19 @@ msgstr ""
 msgid "Title"
 msgstr ""
 
-#: app/views/people_adm/mass_mail.html.erb:11
+#: app/views/people_adm/mass_mail.html.erb:19
 #: app/views/conferences_adm/mail_attendees.html.erb:12
 msgid "Mail body"
 msgstr ""
 
-#: app/views/people_adm/mass_mail.html.erb:13
+#: app/views/people_adm/mass_mail.html.erb:21
 #: app/views/conferences_adm/mail_attendees.html.erb:14
 msgid ""
 "Please enter the body for the mass-mailing you will send. General "
 "information regarding this site will be automatically added."
 msgstr ""
 
-#: app/views/people_adm/mass_mail.html.erb:16
+#: app/views/people_adm/mass_mail.html.erb:24
 #: app/views/conferences_adm/mail_attendees.html.erb:17
 msgid "Send mail"
 msgstr ""
