--- a/po/es/comas.po
+++ b/po/es/comas.po
@@ -2200,7 +2200,20 @@ msgstr "Tome en cuenta que los correos masivos pueden ser vistos como <b>muy poc
 msgid "There are %d people who have accepted to receive general mails about our conferences. "
 msgstr "Hay %d personas que han aceptado recibir correos generales para nuestras actividades."
 
-#: app/views/people_adm/mass_mail.html.erb:10
+#: app/views/people_adm/mass_mail.html.erb:9
+msgid ""
+"You can also export the list of attendees interested in receiving further information and perform the mailing from a separate application: %s, %s."
+msgstr "También puede exportar la lista de participantes interesados en recibir información y efectuar el envío de correos desde otra aplicación: %s, %s."
+
+# app/views/people_adm/mass_mail.html.erb:12
+msgid "Full listing (including names)"
+msgstr "Listado completo (incluyendo nombres)"
+
+# app/views/people_adm/mass_mail.html.erb:14
+msgid "Mail addresses only"
+msgstr "Únicamente las direcciones de correo"
+
+#: app/views/people_adm/mass_mail.html.erb:18
 #: app/views/conferences_adm/mail_attendees.html.erb:11
 #: app/views/people/proposals.html.erb:14
 #: app/views/people/profile.html.erb:21
@@ -2209,17 +2222,17 @@ msgstr "Hay %d personas que han aceptado recibir correos generales para nuestras
 msgid "Title"
 msgstr "Título"
 
-#: app/views/people_adm/mass_mail.html.erb:11
+#: app/views/people_adm/mass_mail.html.erb:19
 #: app/views/conferences_adm/mail_attendees.html.erb:12
 msgid "Mail body"
 msgstr "Cuerpo del correo"
 
-#: app/views/people_adm/mass_mail.html.erb:13
+#: app/views/people_adm/mass_mail.html.erb:21
 #: app/views/conferences_adm/mail_attendees.html.erb:14
 msgid "Please enter the body for the mass-mailing you will send. General information regarding this site will be automatically added."
 msgstr "Especifique el cuerpo del envío masivo que desea realizar. La información general respecto a este sitio será agregada automáticamente."
 
-#: app/views/people_adm/mass_mail.html.erb:16
+#: app/views/people_adm/mass_mail.html.erb:24
 #: app/views/conferences_adm/mail_attendees.html.erb:17
 msgid "Send mail"
 msgstr "Enviar correo"
