Updated timestamp in the README

--- a/README
+++ b/README
@@ -228,7 +228,7 @@ Comas is released under the GPL license, version 3 or higher (at your
 option). A copy of the GPLv3 license is included in the 'COPYING'
 file in Comas' source directory.
 
-Copyright (c) 2008 Gunnar Wolf <gwolf@gwolf.org>
+Copyright (c) 2008-2012 Gunnar Wolf <gwolf@gwolf.org>
 
 Comas includes code written by third parties:
 
