--- a/po/es/comas.po
+++ b/po/es/comas.po
@@ -2860,8 +2860,8 @@ msgid "Confirm new password"
 msgstr "Confirme la nueva contraseña"
 
 #: app/views/people/account.html.erb:1
-msgid "Welcome, %s"
-msgstr "Bienvenido, %s"
+msgid "Welcome, %s (ID: %d)"
+msgstr "Bienvenido, %s (ID: %d)"
 
 #: app/views/people/account.html.erb:5
 msgid "Next conferences you are signed up for"
